编写音频管理接口
我将数据库配置更改为了H2嵌入式数据库,协作者运行时可以按需调整